# todo-list_BE-test

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.test.yaml  fly.example.toml
.github/workflows/: cd.yaml  ci.yaml
src/: app_state.rs  error.rs  main.rs
src/api/: docs.rs  mod.rs
src/api/controller/: mod.rs  oauth2_gg.rs  ping.rs
src/api/controller/auth/: mod.rs  oauth2_gg.rs
src/api/controller/users/: get_all.rs  mod.rs
src/config/: database.rs  gg.rs  mod.rs  server.rs
src/model/: account.rs  mod.rs
src/utils/: gg_scopes.rs  mod.rs
