[package]
name = "todo-list_BE"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5" }
bson = "2.11.0"
dotenv = "0.15.0"
envy = "0.4.2"
futures-util = "0.3.30"
mongodb = "3.0.1"
oauth2 = "4.4.2"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
serde_with = "3.9.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
